# ChangeLog for app-admin/keepassx
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Jul 2013; Justin Lecher <jlec@gentoo.org> keepassx-9999.ebuild:
  Move to new qt package names

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> keepassx-9999.ebuild,
  metadata.xml:
  Bump to EAPI=5 and git-2.eclass

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Recreate full Manifest

*keepassx-9999 (23 Feb 2011)

  23 Feb 2011; Justin Lecher <jlec@gentoo.org> +keepassx-9999.ebuild,
  +metadata.xml:
  Live version from keepassx 2 branch
