@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Aug 2013; Justin Lecher <jlec@gentoo.org> keepassx-9999.ebuild:
+  Make it build, add test
+
   03 Jul 2013; Justin Lecher <jlec@gentoo.org> keepassx-9999.ebuild:
   Move to new qt package names
 
